--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SmaugMC | Network - Forja tu Leyenda</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <section class="hero">
+        <video autoplay muted loop class="hero-video">
+            <source src="videos/logo_animado.mp4" type="video/mp4">
+            Tu navegador no soporta el video de fondo.
+        </video>
+        <div class="hero-content">
+            <h1 class="server-title">SmaugMC | Network</h1>
+            <p class="server-subtitle">Donde las leyendas nacen del fuego y la aventura.</p>
+            <div class="server-ip-box">
+                <span id="server-ip">mc.smaugmc.com</span>
+                <button class="cta-button" onclick="copyIp()">COPIAR IP</button>
+            </div>
+        </div>
+    </section>
+
+    <main>
+        <section id="about" class="content-section">
+            <h2>Bienvenido a tu Nuevo Reino</h2>
+            <p>
+                En las tierras de SmaugMC, cada bloque es una oportunidad y cada jugador un héroe en potencia. 
+                Nacimos de la pasión por Minecraft, creando un universo donde la comunidad es la pieza central.
+                Explora, construye, lucha y sobrevive en un mundo diseñado para ofrecerte desafíos constantes y
+                recompensas legendarias. ¿Estás listo para forjar tu propia historia?
+            </p>
+        </section>
+
+        <section id="game-modes" class="content-section">
+            <h2>Modalidades Disponibles</h2>
+            <div class="modes-container">
+                <div class="mode-card">
+                    <h3>Survival</h3>
+                    <p>
+                        Una experiencia de supervivencia pura y desafiante. Reúne recursos, construye tu base,
+                        comercia con otros y enfréntate a los peligros de la noche. Aquí, tu ingenio es tu mejor arma.
+                    </p>
+                </div>
+                <div class="mode-card">
+                    <h3>SmaugMC (Custom)</h3>
+                    <p>
+                        La modalidad insignia de nuestro servidor. Adéntrate en un mundo con misiones únicas, jefes épicos,
+                        ítems personalizados y eventos que no encontrarás en ningún otro lugar. ¡La verdadera aventura te espera!
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
     
+    <footer>
+        <p>&copy; 2025 SmaugMC | Network. Todos los derechos reservados.</p>
+        <p>Un servidor de Minecraft hecho por y para la comunidad.</p>
+    </footer>
+
+    <script>
+        function copyIp() {
+            const ipText = document.getElementById('server-ip').innerText;
+            navigator.clipboard.writeText(ipText).then(() => {
+                alert('¡IP copiada! Pégala en Minecraft para unirte a la aventura.');
+            }).catch(err => {
+                console.error('Error al copiar la IP:', err);
+            });
+        }
+    </script>
+
 </body>
-</html>
+</html> 
