--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 </head>
 <body>
 
-    <section class="hero">
+    <header>
+        <div class="nav-container">
+            <a href="index.html" class="nav-logo">SmaugMC</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="nav-link active">Inicio</a></li>
+                    <li><a href="normativas.html" class="nav-link">Normativas</a></li>
+                    <li><a href="comunidad.html" class="nav-link">Comunidad</a></li>
+                    <li><a href="soporte.html" class="nav-link">Soporte</a></li>
+                    </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="inicio" class="hero">
         <video autoplay muted loop class="hero-video">
             <source src="videos/logo_animado.mp4" type="video/mp4">
             Tu navegador no soporta el video de fondo.
@@ -75,4 +89,4 @@
     </script>
 
 </body>
-</html> 
+</html>
