Style: Se agrego al archibo CSS el estilo para las secciones de reglas

--- a/normativas.html
+++ b/normativas.html
@@ -27,8 +27,45 @@
 
     <main class="page-content">
         <h1>Reglamento del Servidor</h1>
-        <p>Aquí se mostrarán todas las reglas del servidor y de la comunidad. ¡Página en construcción!</p>
-        </main>
+        <p class="page-subtitle">El conocimiento y respeto de estas normas es obligatorio para todos los jugadores.</p>
+
+        <div class="rules-container">
+            <section class="rules-section">
+                <h2>1. Normas Generales de la Comunidad</h2>
+                <ul>
+                    <li>Respeta a todos los miembros de la comunidad, incluyendo jugadores y staff. No se tolerará el racismo, la homofobia ni ningún tipo de discurso de odio.</li>
+                    <li>El uso de hacks, clientes modificados o cualquier tipo de trampa que te dé una ventaja injusta está estrictamente prohibido y resultará en una sanción permanente.</li>
+                    <li>No te hagas pasar por otros jugadores o miembros del staff. La suplantación de identidad es una falta grave.</li>
+                    <li>Mantén un nombre de usuario y una skin apropiados. Evita contenido ofensivo o NSFW.</li>
+                </ul>
+            </section>
+
+            <section class="rules-section">
+                <h2>2. Normas del Chat</h2>
+                <ul>
+                    <li>Evita el spam (mensajes repetitivos) y el uso excesivo de mayúsculas (flood).</li>
+                    <li>No se permite la publicidad de otros servidores de Minecraft, canales de Discord no relacionados o cualquier otro servicio externo.</li>
+                    <li>Mantén las conversaciones en los canales apropiados. Las discusiones personales deben realizarse en privado.</li>
+                    <li>No compartas información personal tuya o de otros jugadores. Protege tu privacidad.</li>
+                </ul>
+            </section>
+
+            <section class="rules-section">
+                <h2>3. Normas de Jugabilidad (Survival)</h2>
+                <ul>
+                    <li>El "griefing" (destruir o modificar construcciones ajenas sin permiso) está totalmente prohibido.</li>
+                    <li>No robes ítems de cofres, hornos o cualquier contenedor que no te pertenezca.</li>
+                    <li>Se permite el PvP (Jugador contra Jugador) únicamente en las zonas designadas para ello. Atacar a otros en zonas seguras es sancionable.</li>
+                    <li>Evita la construcción de máquinas de lag o granjas que afecten negativamente el rendimiento del servidor.</li>
+                </ul>
+            </section>
+
+            <section class="rules-section sanctions">
+                <h2>Sistema de Sanciones</h2>
+                <p>Las sanciones se aplicarán a discreción del staff y dependerán de la gravedad de la falta. Pueden ir desde una advertencia verbal hasta un baneo permanente de la Network.</p>
+            </section>
+        </div>
+    </main>
     
     <footer>
         <p>&copy; 2025 SmaugMC | Network. Todos los derechos reservados.</p>
