Feat: Diseñado e implementacion de la pagina de Comunidad

--- a/soporte.html
+++ b/soporte.html
@@ -30,7 +30,7 @@
         <p class="page-subtitle">¿Tienes un problema o alguna duda? Rellena el formulario y un miembro del staff te ayudará lo antes posible.</p>
         
         <div class="form-container">
-            <form action="https://formspree.io/f/TU_ID_UNICO" method="POST">
+            <form action="https://formspree.io/f/xgvnqrrp" method="POST">
                 
                 <div class="form-group">
                     <label for="username">Tu nombre de usuario en Minecraft:</label>
