Style: Modificacion de botones - Pagina Comunidad

--- a/comunidad.html
+++ b/comunidad.html
@@ -20,6 +20,7 @@
                     <li><a href="normativas.html" class="nav-link">Normativas</a></li>
                     <li><a href="comunidad.html" class="nav-link active">Comunidad</a></li>
                     <li><a href="soporte.html" class="nav-link">Soporte</a></li>
+                    <li><a href="http://tienda.smaugmc.com" target="_blank" class="nav-link nav-link-tienda">Tienda</a></li>
                 </ul>
             </nav>
         </div>
@@ -58,10 +59,8 @@
         <section class="content-section">
             <h2>Participa y Ayúdanos a Crecer</h2>
             <div class="actions-container">
-                <a href="#" class="action-button discord">Únete a nuestro Discord</a>
-                <a href="#" class="action-button vote">Vota por el Servidor (Sitio 1)</a>
-                <a href="#" class="action-button vote">Vota por el Servidor (Sitio 2)</a>
-                <a href="#" class="action-button twitter">Síguenos en Twitter</a>
+                <a href="http://discord.smaugmc.com" target="_blank" class="action-button discord">Únete a nuestro Discord</a>
+                <a href="https://www.40servidoresmc.es/smaugmc-network" target="_blank" class="action-button vote">Vota en 40ServidoresMC</a>
             </div>
         </section>
 
