--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <li><a href="normativas.html" class="nav-link">Normativas</a></li>
                     <li><a href="comunidad.html" class="nav-link">Comunidad</a></li>
                     <li><a href="soporte.html" class="nav-link">Soporte</a></li>
-                    </ul>
+                    <li><a href="http://tienda.smaugmc.com" target="_blank" class="nav-link nav-link-tienda">Tienda</a></li>
+                </ul>
             </nav>
         </div>
     </header>
