--- a/normativas.html
+++ b/normativas.html
@@ -20,6 +20,7 @@
                     <li><a href="normativas.html" class="nav-link active">Normativas</a></li>
                     <li><a href="comunidad.html" class="nav-link">Comunidad</a></li>
                     <li><a href="soporte.html" class="nav-link">Soporte</a></li>
+                    <li><a href="http://tienda.smaugmc.com" target="_blank" class="nav-link nav-link-tienda">Tienda</a></li>
                 </ul>
             </nav>
         </div>
